[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Skeleton/Skeleton enemy.png" type="Texture" id=2]
[ext_resource path="res://Enemy_Attack.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Health Bar Assets/pixil-frame-0.png" type="Texture" id=4]
[ext_resource path="res://Assets/Health Bar Assets/pixil-frame-1.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 22.0

[sub_resource type="Animation" id=3]
resource_name = "Dead"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 13, 14, 15, 16, 17, 18, 19, 20, 21, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("detech_player/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack_to_player/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("detech_player/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Dead"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Attack/node = SubResource( 6 )
states/Attack/position = Vector2( 870, 57 )
states/Dead/node = SubResource( 7 )
states/Dead/position = Vector2( 1070, 151.562 )
states/Walk/node = SubResource( 8 )
states/Walk/position = Vector2( 691.5, 151.344 )
transitions = [ "Walk", "Attack", SubResource( 9 ), "Attack", "Walk", SubResource( 10 ), "Attack", "Dead", SubResource( 11 ), "Walk", "Dead", SubResource( 12 ) ]
start_node = "Walk"
end_node = "Dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 13.5, 5.75 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 13.5, 6 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 17.5, 6 )

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -22.0
margin_right = 60.0
margin_bottom = 58.0
rect_scale = Vector2( 0.5, 0.5 )
max_value = 75.0
step = 0.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 13
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = ExtResource( 3 )
anims/Dead = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )

[node name="detech_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detech_player"]
position = Vector2( 13.5, 0 )
shape = SubResource( 15 )
disabled = true

[node name="attack_to_player" type="Area2D" parent="."]
position = Vector2( 18, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_to_player"]
modulate = Color( 0, 0.414062, 1, 1 )
position = Vector2( 0.5, 0 )
shape = SubResource( 16 )
disabled = true

[node name="player_is_back" type="Area2D" parent="."]
position = Vector2( -30, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_is_back"]
modulate = Color( 0.160784, 0.784314, 0.12549, 1 )
position = Vector2( 7.5, -1 )
shape = SubResource( 17 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="detech_player" to="." method="_on_detech_player_body_entered"]
[connection signal="body_exited" from="detech_player" to="." method="_on_detech_player_body_exited"]
[connection signal="body_entered" from="attack_to_player" to="." method="_on_attack_to_player_body_entered"]
[connection signal="body_entered" from="player_is_back" to="." method="_on_player_is_back_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
